--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<input class="form-control" type="number" name="area">
+											<input class="form-control" type="number" name="area" required>
 											<span class="form-label">Area</span>
 										</div>
 									</div>
